Fixed white space in code blocks.
git-svn-id: https://hedgehog.fhcrc.org/bioconductor/trunk/bioconductor.org@47641 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/assets/style/bioconductor.css
+++ b/assets/style/bioconductor.css
@@ -256,7 +256,7 @@ li.footer_nav_list_element { float:left; } /* the five main nav elements, not th
   margin-top:1em;
   margin-bottom:1em;
   overflow-x: auto;
-  white-space:nowrap;
+  white-space:pre;
 }
 
 /* simple grey-backgrounded box has no border. use like this <div class='grey_box'>...</div> */
